# gnewt

./: CREDITS  Makefile.am  Makefile.am.old  Makefile.in  README  README.md  aclocal.m4  config.h.in  config.status  configure  configure.in  gnewt.spec.in
debian/: changelog  control  libgnewt0.06.postinst.debhelper  libgnewt0.06.prerm.debhelper  postinst  rules
debian/libgnewt0.06/DEBIAN/: postinst  prerm
debian/libgnewt0.06/usr/share/doc/libgnewt0.06/: copyright
doc/: Makefile.am  Makefile.in  gnewt.lsm.in
include/: Makefile.am  Makefile.in
include/fnewt/: fnewt_pr.h
include/gnewt/: Makefile.am  Makefile.in  gnewt.h  gnewt_pr.h
samples/: Makefile.am  Makefile.in
samples/edit/: Makefile.am  Makefile.in  txt  ui.c
samples/hello/: Makefile.am  Makefile.in  hello.c
samples/install/: Makefile.am  Makefile.in  back.xpm  bg.xpm  help.xpm  logo.xpm  main.c  test.c
samples/install/.xvpics/: back.xpm  bg.xpm  forward.xpm  help.xpm  logo.xpm  right.xpm
src/: Makefile  Makefile.am  Makefile.in
src/common/: Makefile  Makefile.am  Makefile.in  grid.c  scrollbar.c
src/gtk/: Makefile  Makefile.am  Makefile.in  button.c  checkbox.c  checkboxtree.c  entry.c  extended.c  form.c  label.c  listbox.c  newt.c  scale.c  textbox.c
src/slang/: textbox-0.50-13.patch
tests/: Makefile  Makefile.am  Makefile.in  forward.xpm  peanuts.py  popcorn.py  test.c  test.pl  test_ja.c  testgrid.c  testtcl.tcl  testtree.c  testwhiptail.sh
utils/: Makefile.am  Makefile.in
utils/common/: Makefile  Makefile.am  Makefile.in  dialogboxes.c
utils/misc/: sed.pl
utils/python/: Makefile  Makefile.am  Makefile.in  README  gsnack.py  gsnackmodule.c
utils/tcl/: Makefile  Makefile.am  Makefile.in  gwhiptcl.c
utils/whiperl/: Makefile.PL  Makefile.PL.in  Makefile.old  test.pl  whiperl.pm  whiperl.xs
